kubernetes/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: www.felixmoronge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
          - path: /api/ask
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  number: 8080
          - path: /embed
            pathType: Prefix
            backend:
              service:
                name: embed-api
                port:
                  number: 5001
  tls:
    - hosts:
        - www.felixmoronge.com
      secretName: portfolio-tls
